data/derived/sp14/progs/unify/prog1868.ml.out
Characters 76-77:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> 'a * 'b
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'a * 'b
